--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
         const [submitStatus, setSubmitStatus] = useState({ type: '', message: '' });
         const [isSubmitting, setIsSubmitting] = useState(false);
+        const [isComplete, setIsComplete] = useState(false);
 
         const handleChange = (event) => {
           const { name, value } = event.target;
@@ -121,10 +122,6 @@
             });
 
             if (response.ok || response.status === 200) {
-              setSubmitStatus({
-                type: 'success',
-                message: 'Form submitted successfully! We will be in touch soon.'
-              });
               setFormData({
                 seats: '',
                 lcasEpds: '',
@@ -137,7 +134,11 @@
                 sapSystem: '',
                 trainingFunctions: ''
               });
-              setCurrentPage(1);
+              setSubmitStatus({
+                type: 'success',
+                message: 'Thank you! Your responses have been received successfully.'
+              });
+              setIsComplete(true);
             } else {
               const errorText = await response.text();
               throw new Error(`Submission failed with status ${response.status}: ${errorText}`);
@@ -168,6 +169,52 @@
 
         const inputClass = 'w-full px-4 py-3 border border-gray-300 rounded-lg transition focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-300';
         const progressPercentage = (currentPage / totalPages) * 100;
+
+        if (isComplete) {
+          return (
+            <div className="min-h-screen py-12 px-4">
+              <div className="max-w-3xl mx-auto">
+                <div className="bg-white rounded-lg shadow-xl overflow-hidden text-center">
+                  <div className="gradient-header px-8 py-12 text-white">
+                    <div className="flex justify-center mb-6">
+                      <span className="bg-white rounded-full p-4 inline-flex">
+                        <CheckCircle2 className="w-12 h-12 text-green-500" />
+                      </span>
+                    </div>
+                    <h1 className="text-3xl font-semibold">Thank you for completing the intake</h1>
+                    <p className="text-white/80 mt-2">Our team will be in touch shortly with next steps.</p>
+                  </div>
+                  <div className="px-8 py-12 space-y-6 text-gray-700">
+                    <p className="text-lg">We appreciate the time you took to share the details we need to tailor your LCA-CALC solution.</p>
+                    <div className="space-y-2">
+                      <p>Next you can expect us to:</p>
+                      <ul className="space-y-1">
+                        <li>• Review your responses in detail</li>
+                        <li>• Send over the TM65 &amp; TM66 session invite at your chosen time</li>
+                        <li>• Share a tailored quotation and roadmap workshop proposal</li>
+                      </ul>
+                    </div>
+                    <button
+                      type="button"
+                      onClick={() => {
+                        setIsComplete(false);
+                        setSubmitStatus({ type: '', message: '' });
+                        setCurrentPage(1);
+                      }}
+                      className="inline-flex items-center justify-center gap-2 px-6 py-3 border border-gray-300 rounded-lg text-gray-700 font-semibold transition hover:bg-gray-50"
+                    >
+                      <ChevronLeft className="w-5 h-5" />
+                      Start over
+                    </button>
+                  </div>
+                </div>
+                <div className="text-center mt-8 text-gray-600 text-sm">
+                  <p>© 2024 LCA-CALC. All rights reserved.</p>
+                </div>
+              </div>
+            </div>
+          );
+        }
 
         return (
           <div className="min-h-screen py-12 px-4">
@@ -221,7 +268,7 @@
 
                       <div className="space-y-3">
                         <label htmlFor="lcasEpds" className="block text-lg font-semibold text-gray-900">
-                          Question 2: Number of LCAs & EPDs: how many do you require in the first year?
+                          Question 2: Number of LCAs &amp; EPDs: how many do you require in the first year?
                         </label>
                         <input
                           type="text"
@@ -255,7 +302,7 @@
                     <div className="space-y-8">
                       <div className="space-y-3">
                         <label htmlFor="materialsList" className="block text-lg font-semibold text-gray-900">
-                          Question 4: Do you have a list of the most used materials for Flos Spain & Italy?
+                          Question 4: Do you have a list of the most used materials for Flos Spain &amp; Italy?
                         </label>
                         <p className="text-sm text-gray-600">
                           If you don't have it, we can work on it together, the aim is to make sure that all the material datasets that you need are available.
@@ -273,7 +320,7 @@
 
                       <div className="space-y-3">
                         <label className="block text-lg font-semibold text-gray-900">
-                          Question 5 – TM65 & TM66: TM65 and TM66 interface
+                          Question 5 – TM65 &amp; TM66: TM65 and TM66 interface
                         </label>
                         <p className="text-sm text-gray-600 mb-3">
                           Let's discuss over a call? Select your preferred time:
@@ -444,24 +491,10 @@
                         </div>
                       </div>
 
-                      {submitStatus.message && (
-                        <div
-                          className={`rounded-lg p-4 flex items-start gap-3 ${
-                            submitStatus.type === 'success'
-                              ? 'bg-green-50 border border-green-200'
-                              : 'bg-red-50 border border-red-200'
-                          }`}
-                        >
-                          {submitStatus.type === 'success' ? (
-                            <CheckCircle2 className="w-5 h-5 text-green-600 flex-shrink-0 mt-0.5" />
-                          ) : (
-                            <AlertCircle className="w-5 h-5 text-red-600 flex-shrink-0 mt-0.5" />
-                          )}
-                          <p className={`text-sm ${
-                            submitStatus.type === 'success' ? 'text-green-800' : 'text-red-800'
-                          }`}>
-                            {submitStatus.message}
-                          </p>
+                      {submitStatus.type === 'error' && submitStatus.message && (
+                        <div className="rounded-lg p-4 flex items-start gap-3 bg-red-50 border border-red-200">
+                          <AlertCircle className="w-5 h-5 text-red-600 flex-shrink-0 mt-0.5" />
+                          <p className="text-sm text-red-800">{submitStatus.message}</p>
                         </div>
                       )}
                     </div>
