--- a/index.html
+++ b/index.html
@@ -113,12 +113,23 @@
           setSubmitStatus({ type: '', message: '' });
 
           try {
+            const payload = {
+              '1': formData.seats,
+              '2': formData.lcasEpds,
+              '3': formData.languages,
+              '4': formData.materialsList,
+              '5': formData.tm65CallTime,
+              '6': `Where is the BOM stored?: ${formData.bomStorage}\n\nBOM collection process: ${formData.bomProcess}\n\nSKU creation process: ${formData.skuProcess}`,
+              '7': formData.sapSystem,
+              '9': formData.trainingFunctions
+            };
+
             const response = await fetch('https://hook.eu2.make.com/ns86en2yoic2stutc3n71l6weyf66w2s', {
               method: 'POST',
               headers: {
                 'Content-Type': 'application/json'
               },
-              body: JSON.stringify(formData)
+              body: JSON.stringify(payload)
             });
 
             if (response.ok || response.status === 200) {
