Update form with latest changes - 2025-10-08 17:45

--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
               '3': formData.languages,
               '4': formData.materialsList,
               '5': formData.tm65CallTime,
-              '6': `Where is the BOM stored?: ${formData.bomStorage}\n\nBOM collection process: ${formData.bomProcess}\n\nSKU creation process: ${formData.skuProcess}`,
+              '6a': formData.bomStorage,
+              '6b': formData.bomProcess,
+              '6c': formData.skuProcess,
               '7': formData.sapSystem,
               '9': formData.trainingFunctions
             };
