--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
     <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <script type="text/babel">
-      const { useState } = React;
+      const { useState, useEffect } = React;
+
+      // Initialize Supabase client
+      const supabase = supabase.createClient(
+        'https://hihtcrunhtddiebilors.supabase.co',
+        'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImhpaHRjcnVuaHRkZGllYmlsb3JzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDcyOTg0NDIsImV4cCI6MjA2Mjg3NDQ0Mn0.4xw_nBavSK5iUTH73dSO-TlE1Boke6EukXK9hdr3SEk'
+      );
 
       const iconBase = {
         viewBox: '0 0 24 24',
@@ -70,11 +77,20 @@
         </svg>
       );
 
+      const Save = ({ className }) => (
+        <svg {...iconBase} className={className}>
+          <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z" />
+          <polyline points="17 21 17 13 7 13 7 21" />
+          <polyline points="7 3 7 8 15 8" />
+        </svg>
+      );
+
       function LCACalcForm() {
         const [currentPage, setCurrentPage] = useState(1);
         const totalPages = 6;
 
         const [formData, setFormData] = useState({
+          email: '',
           seats: '',
           lcasEpds: '',
           languages: '',
@@ -91,6 +107,9 @@
         const [submitStatus, setSubmitStatus] = useState({ type: '', message: '' });
         const [isSubmitting, setIsSubmitting] = useState(false);
         const [isComplete, setIsComplete] = useState(false);
+        const [isSaving, setIsSaving] = useState(false);
+        const [saveStatus, setSaveStatus] = useState({ type: '', message: '' });
+        const [existingResponseId, setExistingResponseId] = useState(null);
 
         const handleChange = (event) => {
           const { name, value } = event.target;
@@ -98,6 +117,128 @@
             ...prev,
             [name]: value
           }));
+        };
+
+        // Load saved responses when email is entered
+        useEffect(() => {
+          const loadSavedResponses = async () => {
+            if (!formData.email || !formData.email.includes('@')) return;
+
+            try {
+              const { data, error } = await supabase
+                .from('intake_form_responses')
+                .select('*')
+                .eq('email', formData.email)
+                .order('updated_at', { ascending: false })
+                .limit(1)
+                .single();
+
+              if (error && error.code !== 'PGRST116') {
+                console.error('Error loading saved responses:', error);
+                return;
+              }
+
+              if (data) {
+                setExistingResponseId(data.id);
+                setFormData({
+                  email: data.email,
+                  seats: data.seats || '',
+                  lcasEpds: data.lcas_epds || '',
+                  languages: data.languages || '',
+                  materialsList: data.materials_list || '',
+                  tm65CallTime: data.tm65_call_time || '',
+                  bomStorage: data.bom_storage || '',
+                  bomProcess: data.bom_process || '',
+                  skuProcess: data.sku_process || '',
+                  sapSystem: data.sap_system || '',
+                  trainingFunctions: data.training_functions || '',
+                  additionalComments: data.additional_comments || ''
+                });
+                setSaveStatus({
+                  type: 'success',
+                  message: 'Previous responses loaded successfully!'
+                });
+                setTimeout(() => setSaveStatus({ type: '', message: '' }), 3000);
+              }
+            } catch (err) {
+              console.error('Error loading saved responses:', err);
+            }
+          };
+
+          const timeoutId = setTimeout(loadSavedResponses, 500);
+          return () => clearTimeout(timeoutId);
+        }, [formData.email]);
+
+        // Save progress to Supabase
+        const handleSave = async () => {
+          if (!formData.email || !formData.email.includes('@')) {
+            setSaveStatus({
+              type: 'error',
+              message: 'Please enter a valid email address to save your progress.'
+            });
+            return;
+          }
+
+          setIsSaving(true);
+          setSaveStatus({ type: '', message: '' });
+
+          try {
+            const payload = {
+              email: formData.email,
+              seats: formData.seats,
+              lcas_epds: formData.lcasEpds,
+              languages: formData.languages,
+              materials_list: formData.materialsList,
+              tm65_call_time: formData.tm65CallTime,
+              bom_storage: formData.bomStorage,
+              bom_process: formData.bomProcess,
+              sku_process: formData.skuProcess,
+              sap_system: formData.sapSystem,
+              training_functions: formData.trainingFunctions,
+              additional_comments: formData.additionalComments,
+              updated_at: new Date().toISOString()
+            };
+
+            let result;
+            if (existingResponseId) {
+              // Update existing record
+              result = await supabase
+                .from('intake_form_responses')
+                .update(payload)
+                .eq('id', existingResponseId)
+                .select()
+                .single();
+            } else {
+              // Insert new record
+              result = await supabase
+                .from('intake_form_responses')
+                .insert([payload])
+                .select()
+                .single();
+
+              if (result.data) {
+                setExistingResponseId(result.data.id);
+              }
+            }
+
+            if (result.error) {
+              throw result.error;
+            }
+
+            setSaveStatus({
+              type: 'success',
+              message: 'Your progress has been saved successfully!'
+            });
+            setTimeout(() => setSaveStatus({ type: '', message: '' }), 3000);
+          } catch (error) {
+            console.error('Error saving:', error);
+            setSaveStatus({
+              type: 'error',
+              message: `Error saving: ${error.message}. Please try again.`
+            });
+          } finally {
+            setIsSaving(false);
+          }
         };
 
         const handleSubmit = async () => {
@@ -114,6 +255,49 @@
           setSubmitStatus({ type: '', message: '' });
 
           try {
+            // First, save to Supabase
+            const supabasePayload = {
+              email: formData.email,
+              seats: formData.seats,
+              lcas_epds: formData.lcasEpds,
+              languages: formData.languages,
+              materials_list: formData.materialsList,
+              tm65_call_time: formData.tm65CallTime,
+              bom_storage: formData.bomStorage,
+              bom_process: formData.bomProcess,
+              sku_process: formData.skuProcess,
+              sap_system: formData.sapSystem,
+              training_functions: formData.trainingFunctions,
+              additional_comments: formData.additionalComments,
+              updated_at: new Date().toISOString()
+            };
+
+            let supabaseResult;
+            if (existingResponseId) {
+              // Update existing record
+              supabaseResult = await supabase
+                .from('intake_form_responses')
+                .update(supabasePayload)
+                .eq('id', existingResponseId)
+                .select()
+                .single();
+            } else {
+              // Insert new record
+              supabaseResult = await supabase
+                .from('intake_form_responses')
+                .insert([supabasePayload])
+                .select()
+                .single();
+            }
+
+            if (supabaseResult.error) {
+              console.error('Error saving to Supabase:', supabaseResult.error);
+              // Continue with webhook submission even if Supabase fails
+            } else {
+              console.log('Successfully saved to Supabase');
+            }
+
+            // Then, submit to Make.com webhook
             const payload = {
               '1': formData.seats,
               '2': formData.lcasEpds,
@@ -128,7 +312,7 @@
               '10': formData.additionalComments
             };
 
-            console.log('Submitting payload', payload);
+            console.log('Submitting payload to webhook', payload);
 
             const response = await fetch('https://hook.eu2.make.com/ns86en2yoic2stutc3n71l6weyf66w2s', {
               method: 'POST',
@@ -140,6 +324,7 @@
 
             if (response.ok || response.status === 200) {
               setFormData({
+                email: '',
                 seats: '',
                 lcasEpds: '',
                 languages: '',
@@ -152,6 +337,7 @@
                 trainingFunctions: '',
                 additionalComments: ''
               });
+              setExistingResponseId(null);
               setSubmitStatus({
                 type: 'success',
                 message: 'Thank you! Your responses have been received successfully.'
@@ -217,7 +403,9 @@
                       onClick={() => {
                         setIsComplete(false);
                         setSubmitStatus({ type: '', message: '' });
+                        setSaveStatus({ type: '', message: '' });
                         setCurrentPage(1);
+                        setExistingResponseId(null);
                       }}
                       className="inline-flex items-center justify-center gap-2 px-6 py-3 border border-gray-300 rounded-lg text-gray-700 font-semibold transition hover:bg-gray-50"
                     >
@@ -267,6 +455,44 @@
                 </div>
 
                 <div className="p-8 space-y-8">
+                  {/* Email input field - shown on all pages */}
+                  <div className="space-y-3 pb-6 border-b-2 border-gray-200">
+                    <label htmlFor="email" className="block text-lg font-semibold text-gray-900">
+                      Your Email Address <span className="text-red-500">*</span>
+                    </label>
+                    <p className="text-sm text-gray-600">
+                      Enter your email to save your progress and return to this form later.
+                    </p>
+                    <input
+                      type="email"
+                      id="email"
+                      name="email"
+                      value={formData.email}
+                      onChange={handleChange}
+                      className={inputClass}
+                      placeholder="your.email@company.com"
+                      required
+                    />
+                    {saveStatus.message && (
+                      <div className={`rounded-lg p-3 flex items-start gap-3 ${
+                        saveStatus.type === 'success'
+                          ? 'bg-green-50 border border-green-200'
+                          : 'bg-yellow-50 border border-yellow-200'
+                      }`}>
+                        {saveStatus.type === 'success' ? (
+                          <CheckCircle2 className="w-5 h-5 text-green-600 flex-shrink-0 mt-0.5" />
+                        ) : (
+                          <AlertCircle className="w-5 h-5 text-yellow-600 flex-shrink-0 mt-0.5" />
+                        )}
+                        <p className={`text-sm ${
+                          saveStatus.type === 'success' ? 'text-green-800' : 'text-yellow-800'
+                        }`}>
+                          {saveStatus.message}
+                        </p>
+                      </div>
+                    )}
+                  </div>
+
                   {currentPage === 1 && (
                     <div className="space-y-8">
                       <div className="space-y-3">
@@ -536,7 +762,41 @@
                     </div>
                   )}
 
-                  <div className="flex justify-between items-center pt-6 border-t">
+                  {/* Save Progress Button */}
+                  <div className="flex justify-center pt-6 border-t border-gray-200">
+                    <button
+                      onClick={handleSave}
+                      disabled={isSaving || !formData.email}
+                      className="flex items-center gap-2 px-6 py-3 rounded-lg border-2 transition disabled:opacity-50 disabled:cursor-not-allowed"
+                      style={{
+                        borderColor: '#34EE63',
+                        color: '#2ACC56',
+                        backgroundColor: 'rgba(52, 238, 99, 0.05)'
+                      }}
+                      onMouseEnter={(event) => {
+                        if (!isSaving && formData.email) {
+                          event.currentTarget.style.backgroundColor = 'rgba(52, 238, 99, 0.1)';
+                        }
+                      }}
+                      onMouseLeave={(event) => {
+                        event.currentTarget.style.backgroundColor = 'rgba(52, 238, 99, 0.05)';
+                      }}
+                    >
+                      {isSaving ? (
+                        <>
+                          <Loader2 className="w-5 h-5 animate-spin" />
+                          Saving...
+                        </>
+                      ) : (
+                        <>
+                          <Save className="w-5 h-5" />
+                          Save Progress
+                        </>
+                      )}
+                    </button>
+                  </div>
+
+                  <div className="flex justify-between items-center pt-6">
                     <button
                       onClick={prevPage}
                       disabled={currentPage === 1}
